# Aisd-Lab

./: README.md
Lab1/: ._README.md  CMakeLists.txt  Lab1.cc  Lab1.cpp  Lab1.h  main.cc  test.cpp  vector.cc
Lab1/Lab1/: CMakeLists.txt
Lab2/: CMakeLists.txt
Lab2/Lab2/: CMakeLists.txt  List.cc  List.h
Lab3/: CMakeLists.txt  Lab3.cpp  Lab3.h  аналитика 2.numbers  аналитика 3.xlsx
Lab3/Lab3/: CMakeLists.txt  RSR_array.h  RSR_main.cc  Sort.h  Sort_main.cc
Lab3/include/: RSR_array.h  Sort.h  Stats.h
Lab3/src/: RSR_main.cc  Sort_main.cc
